# glacmaptools

./: .gitignore  README.md  environment.yml  pyproject.toml
src/gcmt/: __init__.py  geometry.py
src/glacmaptools/: __init__.py  geometry.py  utils.py
