[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"


[project]
name = 'gcmt'
authors = [
    {name='Bob McNabb', email='robertmcnabb@gmail.com'},
]
description = "a python package for glacier change mapping"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
classifiers = [
      'Intended Audience :: Science/Research',
      'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
      'Natural Language :: English',
      'Programming Language :: Python :: 3',
      'Programming Language :: Python :: 3.10',
      'Programming Language :: Python :: 3.11',
      'Programming Language :: Python :: 3.12',
      'Programming Language :: Python :: 3.13',
      'Programming Language :: Unix Shell',
      'Topic :: Scientific/Engineering :: GIS',
]
requires-python = ">=3.10"
dependencies = [
      'geoutils',
      'pandas',
      'jupyterlab',
]
dynamic = ["version"]


[project.urls]
Homepage = "https://github.com/iamdonovan/gcmt"
"Bug Tracker" = "https://github.com/iamdonovan/gcmt/issues"


[project.scripts]



[tool.setuptools]
include-package-data = true
zip-safe = false


[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools_scm]